# merge-conflict-env

./: Dockerfile  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_generator.py  test_e2e.py
server/: Dockerfile  __init__.py  app.py  merge_conflict_environment.py  requirements.txt
tasks/: __init__.py  conftest.py
tasks/easy_simple_text/: setup.py
tasks/easy_simple_text/gold_resolution/: README.md
tasks/easy_simple_text/tests/: conftest.py  test_resolution.py
tasks/expert_functional/: setup.py
tasks/expert_functional/gold_resolution/: calculator.py  main.py
tasks/expert_functional/tests/: conftest.py  test_resolution.py
tasks/hard_multi_file/: setup.py
tasks/hard_multi_file/gold_resolution/: api.py  config.py  models.py  utils.py
tasks/hard_multi_file/tests/: conftest.py  test_resolution.py
tasks/medium_code_logic/: setup.py
tasks/medium_code_logic/gold_resolution/: main.py  utils.py
tasks/medium_code_logic/tests/: conftest.py  test_resolution.py
tasks/medium_import_conflict/: setup.py
tasks/medium_import_conflict/gold_resolution/: pipeline.py  processor.py
tasks/medium_import_conflict/tests/: conftest.py  test_resolution.py
